# stackseed

./: .gitignore  AGENTS.md  README.md  copier.yml  pyproject.toml
template/: .gitignore  AGENTS.md.jinja  README.md.jinja  components.json  docker-compose.yml.jinja  go.mod.jinja  package.json.jinja  pyproject.toml.jinja  tailwind.config.ts  tsconfig.json  vite.config.ts  {{ backend_prefix }}.dockerignore.jinja  {{ backend_prefix }}Dockerfile.jinja  {{ backend_prefix }}go.mod.jinja  {{ backend_prefix }}pyproject.toml.jinja  {{ frontend_prefix }}.dockerignore.jinja  {{ frontend_prefix }}Dockerfile.jinja  {{ frontend_prefix }}nginx.conf.jinja  {{ frontend_prefix }}vite.config.ts.jinja
template/.agents/: project-context.md.jinja
template/.github/workflows/: ci.yml.jinja
template/cmd/{{ project_slug }}/: main.go.jinja
template/internal/{{ project_slug|replace('-', '_') }}/: service.go.jinja
template/src/: App.test.tsx.jinja  App.tsx.jinja  main.tsx.jinja
template/tests/: test_{{ project_slug|replace('-', '_') }}.py.jinja
template/{{ backend_prefix }}config/: {{ project_slug }}.toml.jinja
template/{{ backend_prefix }}tests/: test_{{ project_slug|replace('-', '_') }}.py.jinja
template/{{ frontend_prefix }}src/: App.test.tsx.jinja  App.tsx.jinja  api.ts.jinja  main.tsx.jinja
tests/: representative_matrix.py  test_core_shared_conventions.py  test_github_actions_ci.py  test_go_backend.py  test_module_layout.py  test_python_backend.py  test_representative_matrix.py  test_shared_cli_config_behavior.py  test_solid_frontend.py
(+8 files in other folders)
